--- a/styles.css
+++ b/styles.css
@@ -76,7 +76,7 @@ img{
     border-radius: 10px;
     
 }
-p{
+.img-txt{
     width: 150px;
 }
 .bottom{
@@ -95,4 +95,33 @@ p{
     text-align: right;
     padding-right: 100px;
     font-weight: bold;
+}
+.action{
+    width: 65%;
+    background-color: #3882F6;
+    margin:10% 15%;
+    border-radius:10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.leftcontainer{
+    color: white;
+    justify-content: center;
+}
+.title2{
+    font-weight: bold;
+}
+#buttonn{
+    margin: 60px;
+    background-color: #3882F6;
+    color: white;
+    border-radius: 5px;
+    padding:6px 20px;
+}
+footer{
+    background-color: #1F2937;
+    text-align: center;
+    padding: 20px;
+    color: white;
 }
